force-app/main/default/objects/Asset/fields/Date_Logged__c.field-meta.xml
<CustomField>
    <fullName>Date_Logged__c</fullName>
    <label>Date Logged</label>
    <type>Date</type>
</CustomField>