force-app/main/default/objects/Asset/fields/Date_Released__c.field-meta.xml
<CustomField>
    <fullName>Date_Released__c</fullName>
    <label>Date Released</label>
    <type>Date</type>
</CustomField>