force-app/main/default/objects/Asset/fields/Title_Name__c.field-meta.xml
<CustomField>
    <fullName>Title_Name__c</fullName>
    <label>Title Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>